<resources>

    <!--String resources used for layout activity_main.xml-->
    <string name="app_name">TestAPI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>

    <!--For testing Async_Task-->
    <string name="async_task">Async Task</string>
    <string name="trigger_async_task">Trigger Image download</string>

    <string name="handler">Handler</string>
    <string name="intent_service">Intent Service</string>

    <string name="thread">Thread</string>
    <string name="worker_thread">Worker Thread</string>
    <string name="handler_thread">Handler Thread</string>

    <string name="view">View</string>
    <string name="fragment">Fragment</string>
    <string name="animation">Animation</string>

    <string name="messenger">Messenger</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="result_receiver">Result Receiver</string>

    <string name="started_service">Started Service</string>
    <string name="bound_service">Bound Service</string>
    <string name="remote_service">Remote Service</string>

    <string name="activity">Activity</string>
    <string name="content_provider">Content Provider</string>
    <string name="intent">Intent</string>

    <string name="crash">Crash</string>
    <string name="anr">ANR</string>
    <string name="storage">Storage</string>

    <string name="widgets">Widgets</string>

    <string name="next_set">Next Set</string>

    <!--Activity resources for activity_main.xml-->
    <string name="title_activity_example">ActivityExample</string>

    <!--For testing finger_print-->
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>

    <!--For testing swipe_gesture-->
    <string name="title_activity_swipe_gesture_example">SwipeGestureExample</string>
    <string name="swipe_gesture_check">Swipe Left, Right, Up, Down to test</string>

    <!--For testing started_service-->
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="show_result">Show Result</string>
    <string name="result">Result</string>

    <!--For testing activity-->
    <string name="activity_test">Activity Test</string>
    <string name="activity_no_ui">Activity with no UI</string>
    <string name="send_msg">Send a Message</string>
    <string name="message_bar">This space for showing messages</string>

    <!--For testing bound_service, same resources used for started_service-->

    <!--For testing crash-->
    <string name="trigger_java_crash">Trigger Java Crash</string>
    <string name="trigger_native_crash">Trigger Native Crash</string>

    <!--For testing anr-->
    <string name="trigger_anr">Trigger ANR</string>

    <!--For testing storage-->
    <string name="app_private_storage">App Private Storage</string>
    <string name="internal_sd_card">Internal SD Card</string>
    <string name="external_sd_card">External SD Card</string>
    <string name="tap_button">Tap the button to show</string>
    <string name="enter_path">Enter Path</string>
    <string name="resolved_path">Resolved Path</string>


    <!--For testing widgets-->
    <string name="switch_">Switch</string>
    <string name="textview">TextView</string>
    <string name="edittext">EditText</string>
    <string name="checkbox">CheckBox</string>
    <string name="radio_button">RadioButton</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="image_description">This is a picture of a sunflower</string>

    <!--String resources used for layout activity_main_second.xml-->
    <string name="google_map">Google Map</string>
    <string name="instant_messenger">Instant Messenger</string>
    <string name="payment_interface">Payment Interface</string>

    <string name="finger_print">Finger Print</string>
    <string name="swipe_gesture">Swipe Gesture</string>

    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="email">email</string>

    <string name="text_to_speech">Text To Speech</string>
    <string name="speech_recognition">Speech Recognition</string>

    <!--For testing google_map-->
    <string name="title_activity_google_map_example">GoogleMapExample</string>

    <!--For testing google_map-->
    <string name="post_on_map">Post on Map</string>
    <string name="title_activity_crash_example">CrashExample</string>

</resources>
