<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:inputType="number"/>

    <EditText
        android:id="@+id/second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"/>

    <Button
        android:id="@+id/show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"/>

</LinearLayout>